<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="random">Random</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
    <string name="title_activity_weather_history">WeatherHistoryActivity</string>
    <string name="weather_history">Weather history</string>
    <string name="_5_days_of_weather">5 Days of weather</string>
    <string name="geoposition">Geoposition</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="day">Day</string>
    <string name="temperature">Temperature</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="back">Back</string>
</resources>
