<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/weatherDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day" />

    <TextView
        android:id="@+id/weatherTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/weatherMaxTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+33"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/weatherMinTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+23"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>